# Turnover

./: .gitignore  README.md  pyproject.toml
packaging/: turnover.spec
src/turnover/: _fake_device.py  bt.py  cli.py  config.py  db.py  interactive.py  map.py  obex.py  pbap.py  preflight.py  sdp.py
src/turnover/_vendor/: __init__.py
src/turnover/_vendor/nobex/: README.md  __init__.py
src/turnover/cli/: main.py  onboarding.py  render_messages.py  utils.py
src/turnover/migrations/: __init__.py  m20260720194244_initial.py  m20260722151200_conversation_addressing.py  m20260722160000_contact_numbers.py
