[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turnover"
version = "0.1.0"
description = "Sync SMS/MMS and contacts from a paired iPhone over Bluetooth MAP/PBAP"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.50",
    "phonenumbers",
    "wcwidth>=0.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
turnover = "turnover.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["src/turnover/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
