[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turnover"
version = "0.1.0"
description = "Send and receive iMessages in your terminal via Bluetooth"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "phonenumbers",
    "wcwidth>=0.2",
]

[project.optional-dependencies]
# Needed for BlueZ D-Bus pairing lookups (bt.py) on real hardware -- not installable
# on macOS without a full GTK/cairo toolchain, and not needed at all when developing
# against TURNOVER_FAKE_DEVICE=1.
bluez = [
    "PyGObject>=3.50",
]
dev = [
    "ruff",
]

[project.scripts]
turnover = "turnover.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["src/turnover/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
